# ball-on-surface

./: .gitignore  pyproject.toml  readme.md
anim/: .gitignore  make_video.sh
data/: parameters.npy  surface.npy  trajectory.npy
doc/: angular velocity common.lyx  ball_generalized_coordinates.lyx  cart-pendulum-alternative.lyx  dynamics-rotating-surface.lyx  dynamics-rotating-surface.sync-conflict-20240605-010847-XXZSMJL.lyx  dynamics-stationary-surface.lyx  dynamics.lyx  energy.lyx  lagrange_eq_with_constr.lyx  motion_amalysis.lyx  newfile1.lyx  newfile2test-7.lyx  quasicoordinates.lyx  quats.lyx  rigid_body_dynamics.lyx  surface.lyx  test-10.lyx  test-3.lyx  test-4.lyx  test-5.lyx  test-6.lyx  test-7.lyx  test-8.lyx  test-9.lyx  test_mass_point.lyx
model/: digital-display.blend  tests.blend
src/: blender_main.py  blender_print.py  dynamics.py  main.py  planar_system.py  quat.py  simulate.py  surface.py  test.py  trajectory.py
src/ball_on_rotary_surface/: ball_on_rotary_cone_dynamics.py  ball_on_rotary_plane_dynamics.py  ball_on_rotary_surface_dynamics.py  parameters.py
src/ball_on_rotary_table/: ball_on_cone_motion_analysis.py  ball_on_rotating_cone_dynamics.py  ball_on_rotating_cone_integrals.py  blender.py  compute_traj_rotating_cone.py  compute_traj_rotating_saddle.py  compute_traj_rotating_sphere.py  dynamics.py  symbolic_computations.py
src/ball_on_stationary_table/: blender.py  dynamics.py  main.py  parameters.py
src/blender/: digital_display.py  helpers.py  update_rotary_table_scene.py  update_static_table_scene.py
src/common/: frame_rotation.py  integrate.py  interp.py  lagrange_method.py  linalg.py  lqr.py  math.py  quat.py  quat_casadi.py  rotations.py  surface.py  trajectory.py
src/compute_trajectories/: ball_on_cone_motion_analysis.py  ball_on_rotary_cone_integrals.py  ball_on_rotary_cone_trajectories.py  ball_on_rotary_plane_trajectories.py  ball_on_rotary_saddle_trajectories.py  ball_on_rotary_sphere_trajectories.py
(+27 files in other folders)
